--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-05 20:29+0500\n"
+"POT-Creation-Date: 2021-12-07 15:38+0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -109,25 +109,63 @@ msgstr "Идеальный пиксельный дизайн с потрясаю
 msgid "Our Story"
 msgstr "Наша История"
 
-#: .\templates\about.html:75 .\templates\index.html:151
+#: .\templates\about.html:33
+msgid ""
+"\n"
+"                                        Consulting represents success at "
+"realizing the company is going in the wrong\n"
+"                                        direction. The only time the company "
+"fails is when it is not possible to do a\n"
+"                                        turnaround anymore. We help "
+"companies pivot into more profitable directions\n"
+"                                        where they can expand and grow. It "
+"is inevitable that companies will end up\n"
+"                                        making a few mistakes; we help them "
+"correct these mistakes.\n"
+"                                        Consulting represents success at "
+"realizing the company is going in the wrong\n"
+"                                        direction. The only time the company "
+"fails is when it is not possible to do a\n"
+"                                        turnaround anymore. We help "
+"companies pivot into more profitable directions\n"
+"                                        where they can expand and grow. It "
+"is inevitable that companies will end up\n"
+"                                        making a few mistakes; we help them "
+"correct these mistakes.\n"
+"                                        "
+msgstr ""
+"\n"
+"Консалтинг означает успех в понимании того, что компания движется в "
+"неправильном направлении. Единственный раз, когда компания терпит неудачу, - "
+"это когда уже невозможно сделать ремонт. Мы помогаем компаниям перейти в "
+"более прибыльные направления, в которых они могут расширяться и расти. "
+"Компании неизбежно совершают несколько ошибок; мы помогаем им исправить эти "
+"ошибки. Консалтинг означает успех в понимании того, что компания движется в "
+"неправильном направлении. Единственный раз, когда компания терпит неудачу, - "
+"это когда уже невозможно сделать ремонт. Мы помогаем компаниям перейти в "
+"более прибыльные направления, в которых они могут расширяться и расти. "
+"Компании неизбежно совершают несколько ошибок; мы помогаем им исправить эти "
+"ошибки"
+
+#: .\templates\about.html:79 .\templates\index.html:151
 msgid "Enjoy Video"
 msgstr "Наслаждайтесь видео"
 
-#: .\templates\about.html:96 .\templates\index.html:172
+#: .\templates\about.html:100 .\templates\index.html:172
 msgid "Comfortable Journey"
 msgstr "Комфортное путешествие"
 
-#: .\templates\about.html:97 .\templates\about.html:106
-#: .\templates\about.html:115 .\templates\index.html:173
+#: .\templates\about.html:101 .\templates\about.html:110
+#: .\templates\about.html:119 .\templates\index.html:173
 #: .\templates\index.html:182 .\templates\index.html:191
 msgid "A wonderful serenity has taken to the possession of my entire soul."
 msgstr "Чудесная безмятежность овладела всей моей душой."
 
-#: .\templates\about.html:105 .\templates\index.html:181
+#: .\templates\about.html:109 .\templates\index.html:181
 msgid "Luxuries Hotel"
 msgstr "Роскошный отель"
 
-#: .\templates\about.html:114 .\templates\index.html:190
+#: .\templates\about.html:118 .\templates\index.html:190
 msgid "Travel Guide"
 msgstr "Путеводитель"
 
@@ -268,7 +306,7 @@ msgstr "Индонезия"
 #: .\templates\index.html:15 .\templates\index.html:28
 #: .\templates\index.html:41
 msgid "Explore Now"
-msgstr ""
+msgstr "Исследуй сейчас"
 
 #: .\templates\index.html:26
 msgid "Australia"
@@ -327,6 +365,363 @@ msgstr "О нас"
 #: .\templates\layouts\header.html:33
 msgid "Contacts"
 msgstr "Контакты"
+
+#: .\templates\registration\activate.html:4
+msgid "Activation Failure"
+msgstr ""
+
+#: .\templates\registration\activate.html:7
+msgid "Account activation failed."
+msgstr ""
+
+#: .\templates\registration\activation_complete.html:4
+#: .\templates\registration\activation_complete_admin_pending.html:4
+msgid "Account Activated"
+msgstr ""
+
+#: .\templates\registration\activation_complete.html:8
+#: .\templates\registration\activation_complete_admin_pending.html:8
+msgid "Your account is now activated."
+msgstr ""
+
+#: .\templates\registration\activation_complete.html:10
+msgid "You can log in."
+msgstr ""
+
+#: .\templates\registration\activation_complete_admin_pending.html:10
+msgid "Once a site administrator activates your account you can login."
+msgstr ""
+
+#: .\templates\registration\activation_email.html:6
+#: .\templates\registration\admin_approve_email.html:6
+#, fuzzy
+#| msgid "Destinations"
+msgid "registration"
+msgstr "Направления"
+
+#: .\templates\registration\activation_email.html:11
+#, python-format
+msgid ""
+"\n"
+"    You (or someone pretending to be you) have asked to register an account "
+"at\n"
+"    %(site_name)s.  If this wasn't you, please ignore this email\n"
+"    and your address will be removed from our records.\n"
+"    "
+msgstr ""
+
+#: .\templates\registration\activation_email.html:18
+#, python-format
+msgid ""
+"\n"
+"    To activate this account, please click the following link within the "
+"next\n"
+"    %(expiration_days)s days:\n"
+"    "
+msgstr ""
+
+#: .\templates\registration\activation_email.html:30
+#: .\templates\registration\admin_approve_email.html:23
+#, python-format
+msgid ""
+"\n"
+"    Sincerely,\n"
+"    %(site_name)s Management\n"
+"    "
+msgstr ""
+
+#: .\templates\registration\activation_email.txt:2
+#, python-format
+msgid ""
+"\n"
+"You (or someone pretending to be you) have asked to register an account at\n"
+"%(site_name)s.  If this wasn't you, please ignore this email\n"
+"and your address will be removed from our records.\n"
+msgstr ""
+
+#: .\templates\registration\activation_email.txt:7
+#, python-format
+msgid ""
+"\n"
+"To activate this account, please click the following link within the next\n"
+"%(expiration_days)s days:\n"
+msgstr ""
+
+#: .\templates\registration\activation_email.txt:14
+#, python-format
+msgid ""
+"\n"
+"Sincerely,\n"
+"%(site_name)s Management\n"
+msgstr ""
+
+#: .\templates\registration\activation_email_subject.txt:1
+#: .\templates\registration\admin_approve_complete_email_subject.txt:1
+msgid "Account activation on"
+msgstr ""
+
+#: .\templates\registration\admin_approve.html:4
+msgid "Approval Failure"
+msgstr ""
+
+#: .\templates\registration\admin_approve.html:7
+msgid "Account Approval failed."
+msgstr ""
+
+#: .\templates\registration\admin_approve_complete.html:4
+msgid "Account Approved"
+msgstr ""
+
+#: .\templates\registration\admin_approve_complete.html:8
+msgid "The user's account is now approved."
+msgstr ""
+
+#: .\templates\registration\admin_approve_complete_email.html:6
+msgid "admin approval"
+msgstr ""
+
+#: .\templates\registration\admin_approve_complete_email.html:11
+msgid ""
+"\n"
+"    Your account is now approved. You can \n"
+"    "
+msgstr ""
+
+#: .\templates\registration\admin_approve_complete_email.html:14
+msgid "log in."
+msgstr ""
+
+#: .\templates\registration\admin_approve_complete_email.txt:2
+msgid ""
+"\n"
+"Your account is now approved. You can log in using the following link\n"
+msgstr ""
+
+#: .\templates\registration\admin_approve_email.html:11
+#, python-format
+msgid ""
+"\n"
+"    The following user (%(user)s) has asked to register an account at\n"
+"    %(site_name)s.\n"
+"    "
+msgstr ""
+
+#: .\templates\registration\admin_approve_email.html:17
+msgid ""
+"\n"
+"    To approve this, please\n"
+"    "
+msgstr ""
+
+#: .\templates\registration\admin_approve_email.html:20
+msgid "click here"
+msgstr ""
+
+#: .\templates\registration\admin_approve_email.txt:2
+#, python-format
+msgid ""
+"\n"
+"The following user (%(user)s) has asked to register an account at\n"
+"%(site_name)s.\n"
+msgstr ""
+
+#: .\templates\registration\admin_approve_email.txt:6
+msgid ""
+"\n"
+"To approve this, please click the following link.\n"
+msgstr ""
+
+#: .\templates\registration\admin_approve_email_subject.txt:1
+msgid "Account approval on"
+msgstr ""
+
+#: .\templates\registration\login.html:7
+msgid "Login"
+msgstr ""
+
+#: .\templates\registration\login.html:13
+#: .\templates\registration\registration_form.html:13
+#, fuzzy
+#| msgid "name"
+msgid "Username"
+msgstr "Имя"
+
+#: .\templates\registration\login.html:17
+#: .\templates\registration\registration_form.html:21
+msgid "Password"
+msgstr ""
+
+#: .\templates\registration\login.html:22
+msgid "Remember me"
+msgstr ""
+
+#: .\templates\registration\login.html:28
+msgid "Forgot Password"
+msgstr ""
+
+#: .\templates\registration\login.html:36
+msgid "Sign Up"
+msgstr ""
+
+#: .\templates\registration\login.html:40
+msgid "Sign In"
+msgstr ""
+
+#: .\templates\registration\logout.html:4
+msgid "Logged out"
+msgstr ""
+
+#: .\templates\registration\logout.html:7
+msgid "Successfully logged out"
+msgstr ""
+
+#: .\templates\registration\password_change_done.html:4
+msgid "Password changed"
+msgstr ""
+
+#: .\templates\registration\password_change_done.html:7
+msgid "Password successfully changed!"
+msgstr ""
+
+#: .\templates\registration\password_change_form.html:4
+msgid "Change password"
+msgstr ""
+
+#: .\templates\registration\password_reset_complete.html:4
+msgid "Password reset complete"
+msgstr ""
+
+#: .\templates\registration\password_reset_complete.html:8
+msgid "Your password has been reset!"
+msgstr ""
+
+#: .\templates\registration\password_reset_complete.html:9
+#, python-format
+msgid "You may now <a href=\"%(login_url)s\">log in</a>"
+msgstr ""
+
+#: .\templates\registration\password_reset_confirm.html:10
+msgid "Confirm password reset"
+msgstr ""
+
+#: .\templates\registration\password_reset_confirm.html:14
+msgid "Enter your new password below to reset your password:"
+msgstr ""
+
+#: .\templates\registration\password_reset_confirm.html:18
+msgid "Set password"
+msgstr ""
+
+#: .\templates\registration\password_reset_done.html:4
+msgid "Password reset"
+msgstr ""
+
+#: .\templates\registration\password_reset_done.html:8
+msgid ""
+"\n"
+"    We have sent you an email with a link to reset your password. Please "
+"check\n"
+"    your email and click the link to continue.\n"
+"    "
+msgstr ""
+
+#: .\templates\registration\password_reset_email.html:3
+msgid "Greetings"
+msgstr ""
+
+#: .\templates\registration\password_reset_email.html:5
+#, python-format
+msgid ""
+"\n"
+"You are receiving this email because you (or someone pretending to be you)\n"
+"requested that your password be reset on the %(domain)s site. If you do not\n"
+"wish to reset your password, please ignore this message.\n"
+msgstr ""
+
+#: .\templates\registration\password_reset_email.html:11
+msgid ""
+"\n"
+"To reset your password, please click the following link, or copy and paste "
+"it\n"
+"into your web browser:\n"
+msgstr ""
+
+#: .\templates\registration\password_reset_email.html:20
+msgid "Your username, in case you've forgotten:"
+msgstr ""
+
+#: .\templates\registration\password_reset_email.html:23
+msgid "Best regards"
+msgstr ""
+
+#: .\templates\registration\password_reset_email.html:24
+msgid "Management"
+msgstr ""
+
+#: .\templates\registration\password_reset_form.html:4
+#: .\templates\registration\password_reset_form.html:15
+msgid "Reset password"
+msgstr ""
+
+#: .\templates\registration\password_reset_form.html:8
+msgid ""
+"\n"
+"    Forgot your password? Enter your email in the form below and we'll send "
+"you instructions for creating a new one.\n"
+"    "
+msgstr ""
+
+#: .\templates\registration\registration_closed.html:4
+msgid "Registration is closed"
+msgstr ""
+
+#: .\templates\registration\registration_closed.html:7
+msgid "Sorry, but registration is closed at this moment. Come back later."
+msgstr ""
+
+#: .\templates\registration\registration_complete.html:4
+msgid "Activation email sent"
+msgstr ""
+
+#: .\templates\registration\registration_complete.html:7
+msgid "Please check your email to complete the registration process."
+msgstr ""
+
+#: .\templates\registration\registration_form.html:7
+#, fuzzy
+#| msgid "Destinations"
+msgid "Registration"
+msgstr "Направления"
+
+#: .\templates\registration\registration_form.html:17
+msgid "E-mail"
+msgstr ""
+
+#: .\templates\registration\registration_form.html:25
+msgid "Confirm Password"
+msgstr ""
+
+#: .\templates\registration\resend_activation_complete.html:4
+msgid "Account Activation Resent"
+msgstr ""
+
+#: .\templates\registration\resend_activation_complete.html:8
+#, python-format
+msgid ""
+"\n"
+"  We have sent an email to %(email)s with further instructions.\n"
+"  "
+msgstr ""
+
+#: .\templates\registration\resend_activation_form.html:4
+msgid "Resend Activation Email"
+msgstr ""
+
+#: .\templates\registration\resend_activation_form.html:10
+#, fuzzy
+#| msgid "submit"
+msgid "Submit"
+msgstr "Отправить"
 
 #: .\tours\models.py:14
 msgid "tour tag"
@@ -388,52 +783,6 @@ msgstr "туры"
 #~ msgctxt "alt. month"
 #~ msgid "January"
 #~ msgstr "12 октября 2019 г."
-
-#~ msgid ""
-#~ "Consulting represents success at realizing the company is going in the "
-#~ "wrongdirection. The only time the company fails is when it is not "
-#~ "possible to do aturnaround anymore. We help companies pivot into more "
-#~ "profitable directionswhere they can expand and grow. It is inevitable "
-#~ "that companies will end upmaking a few mistakes; we help them correct "
-#~ "these mistakes.Consulting represents success at realizing the company is "
-#~ "going in the wrongdirection. The only time the company fails is when it "
-#~ "is not possible to do aturnaround anymore. We help companies pivot into "
-#~ "more profitable directionswhere they can expand and grow. It is "
-#~ "inevitable that companies will end upmaking a few mistakes. we help them "
-#~ "correct these mistakes.\n"
-#~ "                                        Consulting represents success at "
-#~ "realizing the company is going in the wrong\n"
-#~ "                                        direction. The only time the "
-#~ "company fails is when it is not possible to do a\n"
-#~ "                                        turnaround anymore. We help "
-#~ "companies pivot into more profitable directions\n"
-#~ "                                        where they can expand and grow. "
-#~ "It is inevitable that companies will end up\n"
-#~ "                                        making a few mistakes; we help "
-#~ "them correct these mistakes.\n"
-#~ "                                        Consulting represents success at "
-#~ "realizing the company is going in the wrong\n"
-#~ "                                        direction. The only time the "
-#~ "company fails is when it is not possible to do a\n"
-#~ "                                        turnaround anymore. We help "
-#~ "companies pivot into more profitable directions\n"
-#~ "                                       where they can expand and grow. It "
-#~ "is inevitable that companies will end up\n"
-#~ "                                        making a few mistakes. we help "
-#~ "them correct these mistakes.\n"
-#~ "                                        "
-#~ msgstr ""
-#~ "Консалтинг означает успех в понимании того, что компания движется в "
-#~ "неправильном направлении. Единственный раз, когда компания терпит "
-#~ "неудачу, - это когда уже невозможно сделать ремонт. Мы помогаем компаниям "
-#~ "перейти в более прибыльные направления, в которых они могут расширяться и "
-#~ "расти. Компании неизбежно совершают несколько ошибок; мы помогаем им "
-#~ "исправить эти ошибки. Консалтинг означает успех в понимании того, что "
-#~ "компания движется в неправильном направлении. Единственный раз, когда "
-#~ "компания терпит неудачу, - это когда уже невозможно сделать ремонт. Мы "
-#~ "помогаем компаниям перейти в более прибыльные направления, в которых они "
-#~ "могут расширяться и расти. Компании неизбежно совершают несколько ошибок. "
-#~ "мы помогаем им исправить эти ошибки."
 
 #~ msgid "Google inks pact for new 35-storey office"
 #~ msgstr "Google подписал пакт о новом 35-этажном офисе"
@@ -606,9 +955,6 @@ msgstr "туры"
 
 #~ msgid "Phone no."
 #~ msgstr "Номер Телефона"
-
-#~ msgid "submit"
-#~ msgstr "Отправить"
 
 #~ msgid "Subscribe Our Newsletter"
 #~ msgstr "Подпишитесь на нашу рассылку новостей"
